commit updates for search overflow issue #2454

--- a/grails-app/assets/stylesheets/admin.css
+++ b/grails-app/assets/stylesheets/admin.css
@@ -126,4 +126,8 @@
     box-sizing: border-box;
 }
 
+.search-box {
+    margin-left: -14px;
+}
+
 
